--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
+    "highlight.js": "^9.15.6",
     "vue": "^2.6.10",
+    "vue-highlight.js": "^3.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
