--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
+    "caniuse-api": "^3.0.0",
     "core-js": "^2.6.5",
     "highlight.js": "^9.15.6",
     "vue": "^2.6.10",
